istio/gateway-tdebian.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: nginx-gateway
  namespace: hugo
spec:
  selector:
    istio: ingressgateway
  servers:
    ##### Servers ######
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
      - "*"
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https-tech
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: tech-credential
      hosts:
        - "tech.tdebian.com"
    - port:
        number: 80
        name: http-tech
        protocol: HTTP
      hosts:
        - "tech.tdebian.com"
       - "funfact.tdebian.com"
